# MetopPy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: CI.yml
metoppy/: __init__.py  juliapkg.json  metopreader.py
metoppy/tests/: test_basic_interface.py  test_get_test_data_artifact.py
